[package]
name = "rallo"
description = "Rust allocator for tracking memory usage"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0"
authors = [
  "Tommaso Allevi <tomallevi@gmail.com>",
]
documentation = "https://docs.rs/rallo"
repository = "https://github.com/oramasearch/rallo"
homepage = "https://crates.io/crates/rallo"


[lib]
name         = "rallo"

[dependencies]
backtrace = "0.3.74"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
