[package]
name = "rallo"
description = "Rust allocator for tracking memory usage"
version = "0.5.2"
edition = "2024"
license = "MIT"
keywords = [ "profiling", "memory", "allocation", "tracking", "allocator" ]
categories = [ "development-tools", "development-tools::profiling", "memory-management" ]
authors = [
  "Tommaso Allevi <tomallevi@gmail.com>",
]
documentation = "https://docs.rs/rallo"
repository = "https://github.com/oramasearch/rallo"
homepage = "https://crates.io/crates/rallo"

[lib]
name = "rallo"

[dependencies]
backtrace = "0.3.74"
fxprof-processed-profile = "0.8.1"
rustc-demangle = "0.1.24"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
pretty_assertions = "1.4.1"
